http_springboot_demo/servicemesh/control_plane/http_fault_injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-b-vs
spec:
  hosts:
    - hello-b-svc
  http:
    - match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: hello-b-svc
      fault:
        abort:
          percentage:
            value: 49.5
          httpStatus: 500
